Proyecto en proceso

--- a/index.html
+++ b/index.html
@@ -48,7 +48,56 @@
         </header>
         <section id="experiencia">
             <h2>Experiencias</h2>
-            
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>N°</th>
+                        <th>Empresa</th>
+                        <th>Cargo</th>
+                        <th>Funciones</th>
+                        <th>Periodo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Cineplanet</td>
+                        <td>Frontend Developer</td>
+                        <td>
+                            <ul>
+                                <li>
+                                    Desarrolllo de aplicaciones con React
+                                </li>
+                            </ul>
+                        </td>
+                        <td>
+                            Enero 2020, Marzo 2021.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Cineplanet</td>
+                        <td>Frontend Developer</td>
+                        <td>
+                            <ul>
+                                <li>
+                                    Desarrolllo de aplicaciones con React
+                                </li>
+                            </ul>
+                        </td>
+                        <td>
+                            Enero 2020, Marzo 2021.
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>
+                            <a href="https://pe.linkedin.com/"target="_blank" rel="noopener noreferrer"> Ver más Experiencias.</a>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
         </section>
         
         <section id="contact">
