Proyecto en proceso 2

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <header>
             <h1>Yoider Flores | Accesor de Imagen 👔</h1>
             <section>
-                
+                <h2>¡Asesorias de imagen para todas las edades!</h2>
+                <P>
+                    Te ayudamos a REDESCUBRIR TU ESENCIA y RENOVAR TU LOOK, alineados con tus objetivos personales y profesionales. 
+                    Potencia tu estilo personal al máximo con herramientas fáciles de aplicar a tu día a día.
+                </P>
             </section>
         </header>
         <section id="experiencia">
@@ -99,7 +103,17 @@
                 </tfoot>
             </table>
         </section>
+        <article>
+        <h2>
+            Hola Soy Yoider! 
+        </h2>
+        <img src="/assest/IMG_20211130_193919.jpg" alt="" height="180">
+        <p>
+            Desde el 2019 me dedico a la ASESORÍA DE IMAGEN con el fin de ayudar a
+            hombres de todas las edades a relucir a través de la vestimenta y estilo de vida.
+        </p>
         
+        </article>
         <section id="contact">
             <div>
                 <h2>📱Contacto</h2>
