--- a/index.html
+++ b/index.html
@@ -58,39 +58,40 @@
                         <th>N°</th>
                         <th>Empresa</th>
                         <th>Cargo</th>
-                        <th>Funciones</th>
                         <th>Periodo</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Cineplanet</td>
-                        <td>Frontend Developer</td>
+                        <td>Norton</td>
+                        <td>Asesor de imagen</td>
                         <td>
-                            <ul>
-                                <li>
-                                    Desarrolllo de aplicaciones con React
-                                </li>
-                            </ul>
-                        </td>
-                        <td>
-                            Enero 2020, Marzo 2021.
+                            Enero del 2019, Noviembre 2019.
                         </td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Cineplanet</td>
-                        <td>Frontend Developer</td>
+                        <td>H&M</td>
+                        <td>Asesor de imagen de modelos</td>
                         <td>
-                            <ul>
-                                <li>
-                                    Desarrolllo de aplicaciones con React
-                                </li>
-                            </ul>
+                            Febrero del 2020, Marzo del 2021.
                         </td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Avon</td>
+                        <td>Asesor de imagen</td>
                         <td>
-                            Enero 2020, Marzo 2021.
+                            Mayo del 2021, Enero del 2022.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Pieers</td>
+                        <td>Asesor de imagen y publicidad</td>
+                        <td>
+                            Febrero del 2022, Octubre del 2022.
                         </td>
                     </tr>
                 </tbody>
@@ -103,24 +104,50 @@
                 </tfoot>
             </table>
         </section>
-        <article>
+        <article id="hero">
         <h2>
             Hola Soy Yoider! 
         </h2>
         <img src="/assest/IMG_20211130_193919.jpg" alt="" height="180">
         <p>
-            Desde el 2019 me dedico a la ASESORÍA DE IMAGEN con el fin de ayudar a
+            Desde el 2019 me dedico a la ASESORÍA DE IMAGEN, y soy la persona indicada para ayudarte a ti y todos los
             hombres de todas las edades a relucir a través de la vestimenta y estilo de vida.
         </p>
-        
+        <nav>
+            <ul>
+                <li>
+                <a href="https://www.facebook.com/">
+                    <img src="https://www.svgrepo.com/show/157818/facebook.svg" alt="" height="24">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/channel/UC0pBfN4A8AOT1n_xcw2otGA">
+                    <img src="https://www.svgrepo.com/show/157839/youtube.svg" alt="" height="24">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/accounts/login/">
+                    <img src="https://www.svgrepo.com/show/157806/instagram.svg" alt="" height="24">
+                </a>
+            </li>
+        </nav>
+        </ul>
         </article>
         <section id="contact">
             <div>
                 <h2>📱Contacto</h2>
-                    <form>
-                        <input type="tel" placeholder="Celular" />
-                        <button>Contactar</button>
-                    </form>
+                <form>
+                    <input type="name" placeholder="Nombre completo" />
+                    <button>Contactar</button>
+                </form>
+                <form>
+                    <input type="email" placeholder="correo electrónico" />
+                    <button>Contactar</button>
+                </form>
+                <form>
+                    <input type="tel" placeholder="Celular" />
+                    <button>Contactar</button>
+                </form>
             </div>
         </section>
         <footer>
