--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
         </header>
         <section id="experiencia">
             <h2>Experiencias</h2>
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>N°</th>
-                        <th>Empresa</th>
-                        <th>Cargo</th>
-                        <th>Periodo</th>
-                    </tr>
+            <div style="text-align:center;">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>N°</th>
+                            <th>Empresa</th>
+                            <th>Cargo</th>
+                            <th>Periodo</th>
+                        </tr>
                 </thead>
                 <tbody>
                     <tr>
@@ -73,7 +74,7 @@
                     <tr>
                         <td>2</td>
                         <td>H&M</td>
-                        <td>Asesor de imagen de modelos</td>
+                        <td>Asesor de imagen</td>
                         <td>
                             Febrero del 2020, Marzo del 2021.
                         </td>
@@ -89,7 +90,7 @@
                     <tr>
                         <td>4</td>
                         <td>Pieers</td>
-                        <td>Asesor de imagen y publicidad</td>
+                        <td>Asesor de imagen</td>
                         <td>
                             Febrero del 2022, Octubre del 2022.
                         </td>
@@ -104,6 +105,7 @@
                 </tfoot>
             </table>
         </section>
+    </div>
         <article id="hero">
         <h2>
             Hola Soy Yoider! 
